--- a/starter-code/start_game.html
+++ b/starter-code/start_game.html
@@ -79,7 +79,7 @@
           <img src="./assets/icon-x.svg" id="x1_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
           <img src="./assets/icon-x-outline.svg" id="x1_outline"
-            style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
+            style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%);z-index: 99;" />
           <img src="./assets/icon-o.svg" id="o1_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
           <img src="./assets/icon-o-outline.svg" id="o1_outline"
