--- a/starter-code/start_game.html
+++ b/starter-code/start_game.html
@@ -76,117 +76,117 @@
           onmouseover="onHover('first_tile','x1_filled','x1_outline','o1_filled','o1_outline')"
           onmouseout="onMouseOut('x1_outline','o1_outline')"
           onclick="onMouseClick('x1_filled','x1_outline','o1_filled','o1_outline')">
-          <img src="./assets/icon-x.svg" id="x1_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x1_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x1_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x1_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%);z-index: 99;" />
-          <img src="./assets/icon-o.svg" id="o1_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o1_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o1_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o1_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="second_tile"
           onmouseover="onHover('second_tile','x2_filled','x2_outline','o2_filled','o2_outline')"
           onmouseout="onMouseOut('x2_outline','o2_outline')"
           onclick="onMouseClick('x2_filled','x2_outline','o2_filled','o2_outline')">
-          <img src="./assets/icon-x.svg" id="x2_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x2_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x2_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x2_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o2_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o2_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o2_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o2_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="third_tile"
           onmouseover="onHover('third_tile','x3_filled','x3_outline','o3_filled','o3_outline')"
           onmouseout="onMouseOut('x3_outline','o3_outline')"
           onclick="onMouseClick('x3_filled','x3_outline','o3_filled','o3_outline')">
-          <img src="./assets/icon-x.svg" id="x3_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x3_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x3_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x3_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o3_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o3_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o3_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o3_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="fourth_tile"
           onmouseover="onHover('fourth_tile','x4_filled','x4_outline','o4_filled','o4_outline')"
           onmouseout="onMouseOut('x4_outline','o4_outline')"
           onclick="onMouseClick('x4_filled','x4_outline','o4_filled','o4_outline')">
-          <img src="./assets/icon-x.svg" id="x4_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x4_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x4_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x4_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o4_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o4_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o4_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o4_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="fifth_tile"
           onmouseover="onHover('fifth_tile','x5_filled','x5_outline','o5_filled','o5_outline')"
           onmouseout="onMouseOut('x5_outline','o5_outline')"
           onclick="onMouseClick('x5_filled','x5_outline','o5_filled','o5_outline')">
-          <img src="./assets/icon-x.svg" id="x5_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x5_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x5_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x5_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o5_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o5_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o5_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o5_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="sixth_tile"
           onmouseover="onHover('sixth_tile','x6_filled','x6_outline','o6_filled','o6_outline')"
           onmouseout="onMouseOut('x6_outline','o6_outline')"
           onclick="onMouseClick('x6_filled','x6_outline','o6_filled','o6_outline')">
-          <img src="./assets/icon-x.svg" id="x6_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x6_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x6_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x6_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o6_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o6_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o6_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o6_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="seventh_tile"
           onmouseover="onHover('seventh_tile','x7_filled','x7_outline','o7_filled','o7_outline')"
           onmouseout="onMouseOut('x7_outline','o7_outline')"
           onclick="onMouseClick('x7_filled','x7_outline','o7_filled','o7_outline')">
-          <img src="./assets/icon-x.svg" id="x7_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x7_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x7_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x7_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o7_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o7_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o7_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o7_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="eight_tile"
           onmouseover="onHover('eight_tile','x8_filled','x8_outline','o8_filled','o8_outline')"
           onmouseout="onMouseOut('x8_outline','o8_outline')"
           onclick="onMouseClick('x8_filled','x8_outline','o8_filled','o8_outline')">
-          <img src="./assets/icon-x.svg" id="x8_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x8_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x8_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x8_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o8_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o8_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o8_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o8_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
         <div class="grid_item" id="ninth_tile"
           onmouseover="onHover('ninth_tile','x9_filled','x9_outline','o9_filled','o9_outline')"
           onmouseout="onMouseOut('x9_outline','o9_outline')"
           onclick="onMouseClick('x9_filled','x9_outline','o9_filled','o9_outline')">
-          <img src="./assets/icon-x.svg" id="x9_filled"
+          <img src="./assets/icon-x.svg" class="image" id="x9_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-x-outline.svg" id="x9_outline"
+          <img src="./assets/icon-x-outline.svg" class="image" id="x9_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o.svg" id="o9_filled"
+          <img src="./assets/icon-o.svg" class="image" id="o9_filled"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
-          <img src="./assets/icon-o-outline.svg" id="o9_outline"
+          <img src="./assets/icon-o-outline.svg" class="image" id="o9_outline"
             style="display: none; margin-top: 50%; margin-left: 50%; transform: translate(-50%, -50%)" />
         </div>
 
