--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -116,7 +116,7 @@
      default: console.log('error assigning tags to players');
    }
    var p2 = localStorage.getItem('player_two');
-   alert(p2);
+   console.log(p2);
   }
   button_green.onclick = ()=>{
    location.href = 'p1vsp2.html';
@@ -130,7 +130,7 @@
      break;
      default: console.log('error assigning tags to players');
    }
-   alert(player_two);
+   console.log(player_two);
   }
   </script>
 
