--- a/starter-code/start_game.html
+++ b/starter-code/start_game.html
@@ -18,6 +18,25 @@
 
 <body>
   <main>
+    <div class="tooltip">How to play
+      <span class="tooltiptext">
+        <p>Adding tiles</p>
+        When it's your turn, you can click on any empty square to add a tile.
+        You can only add a maximum of three tiles to the board after which, 
+        you can move the tiles from one square to the other.
+        <p>How to move</p>
+        Once each player has three tiles on the board, 
+        the next player can then move an existing tile by clicking on the tile 
+        and then clicking on an empty square NEXT to it(horizontally,vertically or diagonally).
+        Note:
+        You can't jump over other tiles when moving your tiles.
+        You can't move a tile to a square with an existing tile.
+        <p>Winning</p>
+        A player wins by matching three tiles horizontally, vertically or diagonally 
+        <p>Draw</p>
+        A draw is declared when a move is repeated three times by both players.
+      </span>
+    </div>
     <div class="restart-game" id="restart_dialog">
       <h2>RESTART GAME?</h2>
       <div  class="win_loss_round"> <button class="button_grey" onclick="close_dialog()">NO, CANCEL</button>
